Added additional capabilities to check session
